[gd_scene load_steps=13 format=2]

[ext_resource path="res://source/Main/LoginScene.gd" type="Script" id=1]
[ext_resource path="res://source/UI/SceneTransition.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/Helpers/LoginMusicPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/art/ui/LogoEME.png" type="Texture" id=4]
[ext_resource path="res://assets/art/shaders/StarryBG.gdshader" type="Shader" id=5]
[ext_resource path="res://source/UI/MessageBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://source/UI/SettingsBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://source/UI/QuestionBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/audio/aura/connecting.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/audio/aura/request_denied.mp3" type="AudioStream" id=10]
[ext_resource path="res://source/Props/Star.tscn" type="PackedScene" id=11]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/bg_color = null

[node name="LoginScene" type="ColorRect"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="HEADEREMPTY" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
alignment = 1

[node name="HEADER" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 1280.0
margin_bottom = 354.0
alignment = 1

[node name="LOGO" type="TextureRect" parent="MarginContainer/VBoxContainer/HEADER"]
margin_left = 373.0
margin_right = 873.0
margin_bottom = 250.0
texture = ExtResource( 4 )

[node name="Separator2" type="Label" parent="MarginContainer/VBoxContainer/HEADER"]
margin_left = 877.0
margin_top = 101.0
margin_right = 907.0
margin_bottom = 149.0
rect_min_size = Vector2( 30, 48 )
custom_colors/font_color = Color( 0.980392, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "
"
align = 1

[node name="VersionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 358.0
margin_right = 1280.0
margin_bottom = 372.0
text = "Version alpha 0.144         "
align = 1

[node name="HEADEREMPTY2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 376.0
margin_right = 1280.0
margin_bottom = 476.0
rect_min_size = Vector2( 0, 100 )
alignment = 1

[node name="INFO" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 480.0
margin_right = 1280.0
margin_bottom = 528.0
alignment = 1

[node name="Message" type="Label" parent="MarginContainer/VBoxContainer/INFO"]
margin_left = 488.0
margin_right = 738.0
margin_bottom = 48.0
rect_min_size = Vector2( 250, 48 )
custom_colors/font_color = Color( 0.980392, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "Welcome to EME -OFFLINE- EXODUS.
Create a new account or log in.
"
align = 1

[node name="Separator" type="Label" parent="MarginContainer/VBoxContainer/INFO"]
margin_left = 742.0
margin_right = 792.0
margin_bottom = 48.0
rect_min_size = Vector2( 50, 48 )
custom_colors/font_color = Color( 0.980392, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "
"
align = 1

[node name="BUTTONS2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 532.0
margin_right = 1280.0
margin_bottom = 552.0
alignment = 1

[node name="SETTINGSButton" type="Button" parent="MarginContainer/VBoxContainer/BUTTONS2"]
margin_left = 481.0
margin_right = 566.0
margin_bottom = 20.0
rect_min_size = Vector2( 85, 0 )
hint_tooltip = "Click to adjust settings."
text = "SETTINGS"

[node name="INFOButton" type="Button" parent="MarginContainer/VBoxContainer/BUTTONS2"]
margin_left = 570.0
margin_right = 655.0
margin_bottom = 20.0
rect_min_size = Vector2( 85, 0 )
hint_tooltip = "Click to adjust settings."
text = "INFO"

[node name="QUITButton" type="Button" parent="MarginContainer/VBoxContainer/BUTTONS2"]
margin_left = 659.0
margin_right = 744.0
margin_bottom = 20.0
rect_min_size = Vector2( 85, 0 )
hint_tooltip = "Click to exit the game."
text = "QUIT"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/BUTTONS2"]
margin_left = 748.0
margin_top = 3.0
margin_right = 798.0
margin_bottom = 17.0
rect_min_size = Vector2( 50, 0 )

[node name="HEADEREMPTY3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 556.0
margin_right = 1280.0
margin_bottom = 581.0
rect_min_size = Vector2( 0, 25 )
alignment = 1

[node name="FOOTER" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 585.0
margin_right = 1280.0
margin_bottom = 610.0
alignment = 1

[node name="UsernameLabel" type="Label" parent="MarginContainer/VBoxContainer/FOOTER"]
margin_left = 460.0
margin_top = 2.0
margin_right = 537.0
margin_bottom = 22.0
rect_min_size = Vector2( 77, 20 )
text = "USERNAME:"

[node name="UsernameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/FOOTER"]
margin_left = 541.0
margin_right = 691.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 25 )
hint_tooltip = "Put your username here to load your account. Put \"clear\" to clear all saved accounts. Put \"remove*username\" to remove a specific account."
caret_blink = true

[node name="ServerLabel" type="Label" parent="MarginContainer/VBoxContainer/FOOTER"]
margin_left = 695.0
margin_top = 2.0
margin_right = 820.0
margin_bottom = 22.0
rect_min_size = Vector2( 125, 20 )
text = "SERVER: CALMNESS"

[node name="FOOTER2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 614.0
margin_right = 1280.0
margin_bottom = 639.0
alignment = 1

[node name="PasswordLabel" type="Label" parent="MarginContainer/VBoxContainer/FOOTER2"]
margin_left = 460.0
margin_top = 2.0
margin_right = 537.0
margin_bottom = 22.0
rect_min_size = Vector2( 75, 20 )
text = "PASSWORD:"

[node name="PasswordLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/FOOTER2"]
margin_left = 541.0
margin_right = 691.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 25 )
hint_tooltip = "This field isn't actually used! :)"
secret = true
caret_blink = true

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/FOOTER2"]
margin_left = 695.0
margin_top = 2.0
margin_right = 820.0
margin_bottom = 22.0
rect_min_size = Vector2( 125, 20 )
mouse_filter = 1
text = "STATUS: READY"

[node name="FOOTER3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 643.0
margin_right = 1280.0
margin_bottom = 663.0
alignment = 1

[node name="VSeparator" type="Label" parent="MarginContainer/VBoxContainer/FOOTER3"]
margin_left = 460.0
margin_right = 537.0
margin_bottom = 20.0
rect_min_size = Vector2( 77, 20 )

[node name="CONNECTButton2" type="Button" parent="MarginContainer/VBoxContainer/FOOTER3"]
margin_left = 541.0
margin_right = 691.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )
hint_tooltip = "Click to enter the game with your account."
text = "CONNECT"

[node name="VSeparator2" type="Label" parent="MarginContainer/VBoxContainer/FOOTER3"]
margin_left = 695.0
margin_right = 820.0
margin_bottom = 20.0
rect_min_size = Vector2( 125, 20 )

[node name="SceneTransition" parent="." instance=ExtResource( 2 )]

[node name="MessageBox" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -125.0
margin_right = 125.0
margin_bottom = 125.0

[node name="SettingsPanel" parent="." instance=ExtResource( 7 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -73.0
margin_right = 110.0
margin_bottom = 73.0

[node name="QuestionBox" parent="." instance=ExtResource( 8 )]

[node name="AURA_Connecting" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="AURA_RequestDenied" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Star" parent="." instance=ExtResource( 11 )]

[node name="LoginMusicPlayer" parent="." instance=ExtResource( 3 )]
starting_theme = "Exodus"

[connection signal="button_up" from="MarginContainer/VBoxContainer/BUTTONS2/SETTINGSButton" to="." method="_on_SETTINGSButton_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BUTTONS2/INFOButton" to="." method="_on_INFOButton_pressed"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/BUTTONS2/QUITButton" to="." method="_on_QUITButton_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/FOOTER3/CONNECTButton2" to="." method="_on_CONNECTButton2_button_up"]
[connection signal="apply_button_pressed" from="SettingsPanel" to="." method="_on_SettingsPanel_apply_button_pressed"]
[connection signal="finished" from="AURA_Connecting" to="." method="_on_AURA_Connecting_finished"]
